[package]
name = "esp32s3-keyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
rmk = { version = "0.8.2", features = ["esp32s3_ble", "vial"] }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-32768"] }
esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-storage = { version = "0.9.0", features = ["esp32s3"] }
esp-alloc = { version = "0.10.0" }
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }

[profile.release]
codegen-units = 1
debug = 2
lto = "fat"
opt-level = "s"
panic = "abort"
